distribution cleanup - remove os/arch from module dirs and simplify version
now that we don't load modules from user dirs anymore - just system,
we can nuke os/arch from module dir and just keep version. since abi
for a module should be stable for a 1.X release series, we dont need
micro, just 1.9 (or 1.10 etc.). this makes thnigs a bit cleaner and
simpler for emotion_generic_players

--- a/configure.ac
+++ b/configure.ac
@@ -166,21 +166,21 @@ case "$host_os" in
       AC_MSG_ERROR([ceGCC compiler is not supported anymore. Exiting...])
    ;;
    mingw32ce*)
-      MODULE_ARCH="$host_os-$host_cpu"
+      MODULE_ARCH="v"
       MODULE_EXT=".dll"
    ;;
    mingw*)
       have_win32="yes"
       have_windows="yes"
-      MODULE_ARCH="$host_os-$host_cpu-v_maj.v_min.v_mic"
+      MODULE_ARCH="v-v_maj.v_min"
       MODULE_EXT=".dll"
    ;;
    cygwin*)
-      MODULE_ARCH="$host_os-$host_cpu-v_maj.v_min.v_mic"
+      MODULE_ARCH="v-v_maj.v_min"
       MODULE_EXT=".dll"
    ;;
    *)
-      MODULE_ARCH="$host_os-$host_cpu-v_maj.v_min.v_mic"
+      MODULE_ARCH="v-v_maj.v_min"
       MODULE_EXT=".so"
    ;;
 esac
