Doc: Add makefile for text filter previews
Build utility tool based on the local hidden .libs

--- a/configure.ac
+++ b/configure.ac
@@ -3919,6 +3919,7 @@ Makefile
 data/Makefile
 doc/Makefile
 doc/Doxyfile
+doc/previews/Makefile
 src/Makefile
 src/benchmarks/eina/Makefile
 src/benchmarks/eo/Makefile
