Doc: Add filter examples from the doc
The filter code is a copy and paste from the doc.
Maybe the code should be in an include file, so we're sure the
preview and the documentation code are the same?

--- a/doc/previews/Makefile.am
+++ b/doc/previews/Makefile.am
@@ -27,7 +27,7 @@ noinst_PROGRAMS = preview_text_filter
 DATADIR = ${top_srcdir}/doc/previews/img
 HTMLDIR = ${top_srcdir}/doc/html
 
-PREVIEWS =
+PREVIEWS = blend blur bump curve grow mask transform
 
 previews-data:
 	$(MKDIR_P) $(DATADIR)
