fix build break with preview_text_filter.c

--- a/doc/previews/Makefile.am
+++ b/doc/previews/Makefile.am
@@ -3,6 +3,7 @@ if EFL_BUILD_DOC
 .PHONY: doc
 
 AM_CPPFLAGS = \
+	-I$(top_srcdir)/src/lib/eo \
 	-I$(top_srcdir)/src/lib/efl \
 	-I$(top_srcdir)/src/lib/eina \
 	-I$(top_srcdir)/src/lib/evas \
