Doc: Try to fix nightly builds
Nightly build failed with (make doc):
cd: ../../../src/lib/eo/.libs: No such file or directory
Looks like there's one too many ../

I guess the build dir is not the source dir on the build bots.

--- a/doc/previews/Makefile.am
+++ b/doc/previews/Makefile.am
@@ -3,23 +3,23 @@ if EFL_BUILD_DOC
 .PHONY: doc
 
 AM_CPPFLAGS = \
-	-I$(top_srcdir)/src/lib/eo \
-	-I$(top_srcdir)/src/lib/efl \
-	-I$(top_srcdir)/src/lib/eina \
-	-I$(top_srcdir)/src/lib/evas \
-	-I$(top_srcdir)/src/lib/ecore \
-	-I$(top_srcdir)/src/lib/ecore_evas \
+	-I$(abs_top_srcdir)/src/lib/eo \
+	-I$(abs_top_srcdir)/src/lib/efl \
+	-I$(abs_top_srcdir)/src/lib/eina \
+	-I$(abs_top_srcdir)/src/lib/evas \
+	-I$(abs_top_srcdir)/src/lib/ecore \
+	-I$(abs_top_srcdir)/src/lib/ecore_evas \
 	-DEFL_BETA_API_SUPPORT=1 \
 	-DEFL_EO_API_SUPPORT=1 \
 	-D_GNU_SOURCE
 
 LDADD = \
-	-L$(top_srcdir)/src/lib/eo/.libs \
-	-L$(top_srcdir)/src/lib/eina/.libs \
-	-L$(top_srcdir)/src/lib/ecore/.libs \
-	-L$(top_srcdir)/src/lib/evas/.libs \
-	-L$(top_srcdir)/src/lib/ecore_evas/.libs \
-        -leo \
+	-L$(abs_top_builddir)/src/lib/eo/.libs \
+	-L$(abs_top_builddir)/src/lib/eina/.libs \
+	-L$(abs_top_builddir)/src/lib/ecore/.libs \
+	-L$(abs_top_builddir)/src/lib/evas/.libs \
+	-L$(abs_top_builddir)/src/lib/ecore_evas/.libs \
+	-leo \
 	-leina \
 	-levas \
 	-lecore \
@@ -27,8 +27,8 @@ LDADD = \
 
 noinst_PROGRAMS = preview_text_filter
 
-DATADIR = ${top_srcdir}/doc/previews/img
-HTMLDIR = ${top_srcdir}/doc/html
+DATADIR = ${abs_top_srcdir}/doc/previews/img
+HTMLDIR = ${abs_top_srcdir}/doc/html
 
 PREVIEWS = blend blur bump curve grow mask transform \
 	example_1
@@ -40,11 +40,11 @@ previews-data:
 		echo "  GEN      filter_$${a}.png" ; \
 		FONT="Sans" ; \
 		SIZE=24 ; \
-		FILTER=`cat ${top_srcdir}/src/examples/evas/filters/filter_$${a}.txt` ; \
-		if [ -e ${top_srcdir}/doc/previews/filter_$${a}.sh ] ; then \
-			source ${top_srcdir}/doc/previews/filter_$${a}.sh ; \
+		FILTER=`cat ${abs_top_srcdir}/src/examples/evas/filters/filter_$${a}.txt` ; \
+		if [ -e ${abs_top_srcdir}/doc/previews/filter_$${a}.sh ] ; then \
+			source ${abs_top_srcdir}/doc/previews/filter_$${a}.sh ; \
 		fi ; \
-		$(top_srcdir)/doc/previews/preview_text_filter "$${TEXT}" "$${FILTER}" "$(DATADIR)/filter_$${a}.png" "$${FONT}" "$${SIZE}" ; \
+		$(abs_top_srcdir)/doc/previews/preview_text_filter "$${TEXT}" "$${FILTER}" "$(DATADIR)/filter_$${a}.png" "$${FONT}" "$${SIZE}" ; \
 		cp "$(DATADIR)/filter_$${a}.png" "$(HTMLDIR)/" ; \
 	done
 
